# jitendex-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/jitendex_py/: __init__.py  parser.py
tests/: test_parser.py  test_terms.json
