[project]
name = "jitendex-py"
version = "0.1.0"
description = "Parser for Jitendex dictionary files for Yomitan"
readme = "README.md"
authors = [
    { name = "Victor Neo", email = "icyisamu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=8.3.0",
]
